<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">



    <android.support.v7.widget.AppCompatImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:id="@+id/foto_logo"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/prompt_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/prompt_password"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/action_forgot_password"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"
        android:onClick="home"/>
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/action_register"
        android:onClick="registrar"
        android:textStyle="bold"
        android:background="@drawable/rounded_button2"/>


</LinearLayout>